--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: output
-        path: bin\Release
+        path: Phasmophobia Save Editor\bin\Release
