--- a/Phasmophobia Save Editor/Phasmophobia Save Editor.csproj
+++ b/Phasmophobia Save Editor/Phasmophobia Save Editor.csproj
@@ -103,11 +103,36 @@
     <Compile Include="Extensions\AssemblyExtension.cs" />
     <Compile Include="Extensions\EnumExtension.cs" />
     <Compile Include="Extensions\ParentOfTypeExtensions.cs" />
+    <Compile Include="Extensions\StringBuilderExtensions.cs" />
     <Compile Include="Handlers\ExceptionHandler.cs" />
     <Compile Include="Handlers\OneInstanceHandler.cs" />
     <Compile Include="Infrastructures\Language.cs" />
     <Compile Include="Infrastructures\Theme.cs" />
     <Compile Include="Infrastructures\WindowsVersion.cs" />
+    <Compile Include="Logging\ILogFactory.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\Layouts\AssemblyNameLayout.cs" />
+    <Compile Include="Logging\Layouts\AssemblyVersionLayout.cs" />
+    <Compile Include="Logging\Layouts\ILogLayout.cs" />
+    <Compile Include="Logging\Layouts\LevelLayout.cs" />
+    <Compile Include="Logging\Layouts\LoggerLayout.cs" />
+    <Compile Include="Logging\Layouts\LogLayoutAttribute.cs" />
+    <Compile Include="Logging\Layouts\LongDateLogLayout.cs" />
+    <Compile Include="Logging\Layouts\MessageLayout.cs" />
+    <Compile Include="Logging\Layouts\TotalMemoryInfoLayout.cs" />
+    <Compile Include="Logging\LogEventInfo.cs" />
+    <Compile Include="Logging\LogEventInfoBuilder.cs" />
+    <Compile Include="Logging\LogFactory.cs" />
+    <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Logging\LoggerCacheKey.cs" />
+    <Compile Include="Logging\LoggerConfig.cs" />
+    <Compile Include="Logging\LoggerConfigBuilder.cs" />
+    <Compile Include="Logging\LogLevel.cs" />
+    <Compile Include="Logging\LogManager.cs" />
+    <Compile Include="Logging\Writers\ConsoleWriter.cs" />
+    <Compile Include="Logging\Writers\DebugWriter.cs" />
+    <Compile Include="Logging\Writers\FIleWriter.cs" />
+    <Compile Include="Logging\Writers\ILogWritter.cs" />
     <Compile Include="MarkupExtensions\DynamicResourceProxy.cs" />
     <Compile Include="MarkupExtensions\LocalizationBinding.cs" />
     <Compile Include="Models\BaseData.cs" />
@@ -133,6 +158,8 @@
     <Compile Include="Utils\AcrylicHelper.cs" />
     <Compile Include="Utils\JsonSerializer.cs" />
     <Compile Include="Utils\LocalizationManager.cs" />
+    <Compile Include="Utils\PathUtil.cs" />
+    <Compile Include="Utils\StackTraceUtils.cs" />
     <Compile Include="Utils\ThemeManager.cs" />
     <Compile Include="Utils\UIDispatcher.cs" />
     <Compile Include="Utils\WindowResizer.cs" />
