Added about info; Added general agreements; Updated app icon;

--- a/Phasmophobia Save Editor/Phasmophobia Save Editor.csproj
+++ b/Phasmophobia Save Editor/Phasmophobia Save Editor.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Utils\UIDispatcher.cs" />
     <Compile Include="Utils\WindowResizer.cs" />
     <Compile Include="Utils\WindowsOSHelper.cs" />
+    <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\Base\BaseBindable.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="Models\EditableSaveStringProperty.cs" />
@@ -196,6 +197,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\AboutView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -203,6 +208,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Views\AboutView.xaml.cs">
+      <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
